--- a/docs-site/docs/features/call-hierarchy.mdx
+++ b/docs-site/docs/features/call-hierarchy.mdx
@@ -65,7 +65,7 @@ Running the tool on `buildApp` reveals all flows that invoke it.
 Right-click on a flow name and choose **Call Hierarchy**.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--sm0">
     <img src={require('@site/static/img/callers-of-build-app.png').default} alt="Callers of buildApp" />
     <figcaption>
         Call hierarchy showing that <code>buildApp</code> is called by <code>deployProd</code>.
@@ -79,7 +79,7 @@ Running the tool on `deployProd` shows the sequence of steps it orchestrates.
 Right-click on a flow name and choose **Call Hierarchy**.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--sm0">
     <img src={require('@site/static/img/callees-of-deploy-prod.png').default} alt="Callees of deployProd" />
     <figcaption>
         Callee hierarchy showing the sub-flows called by <code>deployProd</code>.
