--- a/docs-site/docs/features/completion.mdx
+++ b/docs-site/docs/features/completion.mdx
@@ -42,7 +42,7 @@ Writing a <span className="tokenBadge" data-kind="section">call</span> step beco
 Type `cal` and press `Enter` to create a <span className="tokenBadge" data-kind="section">call</span> step, then use <Keystroke mac={[{icon: "⌃", label: "Ctrl"}, {label: "Space"}]} win={[{label: "Ctrl"}, {label: "Space"}]} /> to see available flow names.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--sm2">
     <img src={require('@site/static/img/completion.png').default} alt="Code Completion Example" />
     <figcaption>
         Context-aware completion for Concord YAML keys and flow names.
