--- a/docs-site/docs/features/find-usages.mdx
+++ b/docs-site/docs/features/find-usages.mdx
@@ -51,7 +51,7 @@ Running Find Usages on the `setupEnv` definition will list both `deployDev` and 
 Select `setupEnv` and press <Keystroke mac={[{icon: "⌥", label: "Alt"}, {label: "F7"}]} win={[{label: "Alt"}, {label: "F7"}]} /> to see where it is used.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--md2">
     <img src={require('@site/static/img/find-usages.png').default} alt="Find Usages Example" />
     <figcaption>
         Find Usages tool window showing all references to a specific flow.
