--- a/docs-site/docs/features/flow-docs.mdx
+++ b/docs-site/docs/features/flow-docs.mdx
@@ -79,7 +79,7 @@ The plugin uses this metadata to provide a first-class development experience:
 Type `##` on a line above a flow and press `Enter`. The IDE will help you structure your documentation.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--md">
     <img src={require('@site/static/img/flow-docs.png').default} alt="Flow Documentation Example" />
     <figcaption>
         Structured documentation providing metadata for flow parameters.
