--- a/docs-site/docs/features/inspections.mdx
+++ b/docs-site/docs/features/inspections.mdx
@@ -44,7 +44,7 @@ Inspections help keep your monorepo clean by flagging naming collisions:
 Create two flows with the same name in different files within the same project and see the IDE flag them.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--lg">
     <img src={require('@site/static/img/inspections.png').default} alt="Rich Inspections Example" />
     <figcaption>
         Inspection highlighting a duplicated flow name across different files in the same scope.
