--- a/docs-site/docs/features/navigation.mdx
+++ b/docs-site/docs/features/navigation.mdx
@@ -39,7 +39,7 @@ Instantly jump from a call site to the implementation, even across the project:
 Hold <Keystroke mac={[{icon: "⌘", label: "Cmd"}]} win={[{label: "Ctrl"}]} /> and hover over a flow name in a `call` step. Click the link to jump to its definition.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--lg">
     <img src={require('@site/static/img/navigation.png').default} alt="Navigation Example" />
     <figcaption>
         Jumping from a <code>call</code> step to a flow definition in another file.
