--- a/docs-site/docs/features/quick-fixes.mdx
+++ b/docs-site/docs/features/quick-fixes.mdx
@@ -41,7 +41,7 @@ Instantly correct typos in your documentation without re-typing:
 Type an incorrect type like `strnig` in a flow documentation block, then press <Keystroke mac={[{icon: "⌥", label: "Alt"}, {label: "⏎"}]} win={[{label: "Alt"}, {label: "Enter"}]} /> to see suggestions.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--md2">
     <img src={require('@site/static/img/quick-fixes.png').default} alt="Quick Fixes Example" />
     <figcaption>
         Using a Quick Fix to correct a misspelled type in a documentation block.
