--- a/docs-site/docs/features/rename.mdx
+++ b/docs-site/docs/features/rename.mdx
@@ -35,7 +35,7 @@ Watch as the plugin updates multiple files simultaneously to keep your project c
 Select a flow name, press <Keystroke mac={[{icon: "⇧", label: "Shift"}, {label: "F6"}]} win={[{label: "Shift"}, {label: "F6"}]} />, type a new name, and observe how all call sites are updated instantly.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--lg">
     <img src={require('@site/static/img/rename.png').default} alt="Rename Refactoring Example" />
     <figcaption>
         Renaming a flow definition automatically updates all <code>call</code> steps in the project.
