--- a/docs-site/docs/features/structure-view.mdx
+++ b/docs-site/docs/features/structure-view.mdx
@@ -14,7 +14,7 @@ The **Structure View** provides a tree-based outline of your file, allowing you 
 ## Overview
 
 The Structure View displays a hierarchical tree of:
-*   **Flows** 
+*   **Flows**
 *   **Forms**
 *   **Triggers**
 *   **Public Flows**
@@ -53,7 +53,7 @@ Given the following file:
 flows:
   main:
     - log: "Starting..."
-  
+
   deploy:
     - call: setupEnvironment
 
@@ -74,7 +74,7 @@ The Structure View provides a clear, hierarchical overview of all elements in yo
 Open the **Structure** tool window and click on any flow to navigate.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--sm2">
     <img src={require('@site/static/img/structure-view.png').default} alt="Concord Structure View" />
     <figcaption>
         Structure View showing flows, triggers, and forms for the current file.
