--- a/docs-site/docs/features/validation.mdx
+++ b/docs-site/docs/features/validation.mdx
@@ -76,7 +76,7 @@ Real-time validation helps you fix issues before you even try to run the flow:
 Intentionally misspell a keyword like `log` as `logg` and see the IDE highlight it with an error description.
 :::
 
-<figure className="docFigure">
+<figure className="docFigure docFigure--sm">
     <img src={require('@site/static/img/validation.png').default} alt="Validation Example" />
     <figcaption>
         Real-time validation highlighting a missing required key in an <code>if</code> step.
