--- a/docs-site/blog/2026-01-14-release-0.15.0.mdx
+++ b/docs-site/blog/2026-01-14-release-0.15.0.mdx
@@ -5,7 +5,7 @@ authors: [brig]
 tags: [release, highlighting]
 ---
 
-The `0.15.0` release introduces semantic syntax [highlighting](../docs/features/highlighting) for Concord YAML files. This update transforms the way you read and write Concord flows by making the structure and logic of your automation code visually distinct.
+The `0.15.0` release introduces semantic syntax [highlighting](/docs/features/highlighting) for Concord YAML files. This update transforms the way you read and write Concord flows by making the structure and logic of your automation code visually distinct.
 
 <!--truncate-->
 
