--- a/docs-site/docs/features/language-injection.mdx
+++ b/docs-site/docs/features/language-injection.mdx
@@ -46,3 +46,17 @@ Once a language is injected, you gain access to standard IDE features for that l
 *   **Code Completion:** Suggestions for standard library functions, variables, and Concord implicit objects.
 *   **Inspections & Quick Fixes:** Error detection and automated fixes specific to the language.
 *   **Formatting:** Reformat injected code according to language-specific style guides.
+
+## Example
+
+### Language Injection in Action
+
+Editing a <span className="tokenBadge" data-kind="step">script</span> step with full IDE support for the Groovy language:
+
+<figure className="docFigure docFigure--lg">
+    <img src={require('@site/static/img/language-injection.png').default} alt="Language Injection Example" />
+    <figcaption>
+        Groovy code injection with syntax highlighting and autocompletion for implicit variables.
+    </figcaption>
+</figure>
+
