project: versioned docs

--- a/docs-site/docs/features/call-hierarchy.mdx
+++ b/docs-site/docs/features/call-hierarchy.mdx
@@ -4,7 +4,7 @@ description: Visualize flow dependencies and caller relationships
 sidebar_position: 4
 ---
 
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
 # Call Hierarchy
 
