--- a/docs-site/docs/features/completion.mdx
+++ b/docs-site/docs/features/completion.mdx
@@ -3,7 +3,7 @@ title: Code Completion
 description: Context-aware autocomplete for Concord YAML and documentation
 ---
 
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
 # Code Completion
 
