--- a/docs-site/docs/features/find-usages.mdx
+++ b/docs-site/docs/features/find-usages.mdx
@@ -3,7 +3,7 @@ title: Find Usages
 description: Find all references to flows and variables across your project
 ---
 
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
 # Find Usages
 
