--- a/docs-site/docs/features/flow-docs.mdx
+++ b/docs-site/docs/features/flow-docs.mdx
@@ -3,7 +3,7 @@ title: Flow Documentation
 description: Document your flows with structured metadata for better IDE support
 ---
 
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
 # Flow Documentation
 
