--- a/docs-site/docs/features/inspections.mdx
+++ b/docs-site/docs/features/inspections.mdx
@@ -3,7 +3,7 @@ title: Rich Inspections
 description: Advanced static analysis for Concord projects
 ---
 
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
 # Rich Inspections
 
