--- a/docs-site/docs/features/navigation.mdx
+++ b/docs-site/docs/features/navigation.mdx
@@ -3,7 +3,7 @@ title: Navigation
 description: Navigate your Concord project with ease
 ---
 
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
 # Navigation
 
