--- a/docs-site/docs/features/quick-fixes.mdx
+++ b/docs-site/docs/features/quick-fixes.mdx
@@ -3,7 +3,7 @@ title: Quick Fixes
 description: Fix common Concord YAML issues with one click
 ---
 
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
 # Quick Fixes
 
