--- a/docs-site/docs/features/rename.mdx
+++ b/docs-site/docs/features/rename.mdx
@@ -3,7 +3,7 @@ title: Rename Refactoring
 description: Safely rename flows and update all references
 ---
 
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
 # Rename Refactoring
 
