--- a/docs-site/docs/features/structure-view.mdx
+++ b/docs-site/docs/features/structure-view.mdx
@@ -3,7 +3,7 @@ title: Structure View
 description: Navigate Concord files efficiently with Structure View
 ---
 
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
 # Structure View
 
