--- a/docs-site/docs/features/validation.mdx
+++ b/docs-site/docs/features/validation.mdx
@@ -3,7 +3,7 @@ title: Schema Validation
 description: Real-time error checking for Concord YAML
 ---
 
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
 # Schema Validation
 
