--- a/docs-site/docs/features/overview.mdx
+++ b/docs-site/docs/features/overview.mdx
@@ -4,20 +4,20 @@ description: A comprehensive guide to Concord IntelliJ Plugin capabilities
 ---
 
 import Link from '@docusaurus/Link';
-import Keystroke from '../../src/components/Keystroke';
+import Keystroke from '@site/src/components/Keystroke';
 
-import ValidationIcon from '../../src/icons/validation.svg';
-import NavigationIcon from '../../src/icons/navigation.svg';
-import CompletionIcon from '../../src/icons/completion.svg';
-import CallHierarchyIcon from '../../src/icons/call-hierarchy.svg';
-import FindUsagesIcon from '../../src/icons/find-usages.svg';
-import RenameIcon from '../../src/icons/rename.svg';
-import StructureViewIcon from '../../src/icons/structure-view.svg';
-import HighlightingIcon from '../../src/icons/highlighting.svg';
-import InspectionIcon from '../../src/icons/inspection.svg';
-import QuickFixesIcon from '../../src/icons/quick-fixes.svg';
-import FlowDocsIcon from '../../src/icons/flow-docs.svg';
-import ScopesIcon from '../../src/icons/scopes.svg';
+import ValidationIcon from '@site/src/icons/validation.svg';
+import NavigationIcon from '@site/src/icons/navigation.svg';
+import CompletionIcon from '@site/src/icons/completion.svg';
+import CallHierarchyIcon from '@site/src/icons/call-hierarchy.svg';
+import FindUsagesIcon from '@site/src/icons/find-usages.svg';
+import RenameIcon from '@site/src/icons/rename.svg';
+import StructureViewIcon from '@site/src/icons/structure-view.svg';
+import HighlightingIcon from '@site/src/icons/highlighting.svg';
+import InspectionIcon from '@site/src/icons/inspection.svg';
+import QuickFixesIcon from '@site/src/icons/quick-fixes.svg';
+import FlowDocsIcon from '@site/src/icons/flow-docs.svg';
+import ScopesIcon from '@site/src/icons/scopes.svg';
 
 export const FeatureCard = ({icon: Icon, title, description, to}) => (
   <Link className="landingCard" to={to}>
