full IDE support for script steps (#63)

--- a/docs-site/docs/features/overview.mdx
+++ b/docs-site/docs/features/overview.mdx
@@ -4,6 +4,7 @@ description: A comprehensive guide to Concord IntelliJ Plugin capabilities
 ---
 
 import Link from '@docusaurus/Link';
+
 import Keystroke from '@site/src/components/Keystroke';
 
 import ValidationIcon from '@site/src/icons/validation.svg';
@@ -18,6 +19,7 @@ import InspectionIcon from '@site/src/icons/inspection.svg';
 import QuickFixesIcon from '@site/src/icons/quick-fixes.svg';
 import FlowDocsIcon from '@site/src/icons/flow-docs.svg';
 import ScopesIcon from '@site/src/icons/scopes.svg';
+import InjectIcon from '@site/src/icons/code-file.svg';
 
 export const FeatureCard = ({icon: Icon, title, description, to}) => (
   <Link className="landingCard" to={to}>
@@ -77,6 +79,12 @@ Write correct code faster with intelligent assistance.
         title="Completion"
         description="Context-aware autocomplete for keys, parameters, and flows."
         to="/docs/features/completion"
+    />
+    <FeatureCard
+        icon={InjectIcon}
+        title="Language Injection"
+        description="Edit scripts (Groovy, JS, Python) with full IDE support inside YAML."
+        to="/docs/features/language-injection"
     />
     <FeatureCard
         icon={ValidationIcon}
