favicon fix, blog up

--- a/docs-site/blog/xxxx-xx-xx-release-0.17.0.mdx
+++ b/docs-site/blog/xxxx-xx-xx-release-0.17.0.mdx
@@ -38,18 +38,9 @@ Whether you are writing **Groovy**, **JavaScript**, **Python**, or **Ruby**, you
 We've added a dedicated **Icon Provider** for Concord files.
 Your Concord elements now have distinct icons in the Project View, Structure View, and Navigation popups, making it easier to distinguish between:
 
-*   <FlowIcon width="16" height="16" style={{verticalAlign: "text-bottom"}} /> <strong>Flows</strong>
-*   <TriggerIcon width="16" height="16" style={{verticalAlign: "text-bottom"}} /> <strong>Triggers</strong>
-*   <FormIcon width="16" height="16" style={{verticalAlign: "text-bottom"}} /> <strong>Forms</strong>
-
-This visual update makes scanning large files and project structures much faster.
-
-<figure className="docFigure docFigure--sm2">
-    <img src={require('@site/static/img/structure-view.png').default} alt="Concord Structure View" />
-    <figcaption>
-        New icons help identify element types at a glance.
-    </figcaption>
-</figure>
+*   <FlowIcon width="16" height="16" style={{verticalAlign: "text-bottom"}} /> <strong>Flow</strong>
+*   <TriggerIcon width="16" height="16" style={{verticalAlign: "text-bottom"}} /> <strong>Trigger</strong>
+*   <FormIcon width="16" height="16" style={{verticalAlign: "text-bottom"}} /> <strong>Form</strong>
 
 ## Scope Safety Inspections
 
