--- a/docs-site/docs/features/navigation.mdx
+++ b/docs-site/docs/features/navigation.mdx
@@ -27,7 +27,7 @@ Quickly find and jump to any flow, form, or trigger by name across your entire p
 
 ## Breadcrumbs
 
-As you navigate through deep YAML structures, breadcrumbs at the bottom of the editor help you stay oriented, showing you exactly which flow and step you are currently editing.
+As you navigate through deep YAML structures, [breadcrumbs](./breadcrumbs.mdx) at the bottom of the editor help you stay oriented, showing you exactly which flow and step you are currently editing.
 
 ## Example
 
