--- a/docs-site/docs/features/overview.mdx
+++ b/docs-site/docs/features/overview.mdx
@@ -66,6 +66,12 @@ Understand complex projects by visualizing relationships between flows.
         description="Navigate the structure of large Concord files at a glance."
         to="/docs/features/structure-view"
     />
+    <FeatureCard
+        icon={NavigationIcon}
+        title="Breadcrumbs"
+        description="Track your location in deep YAML structures."
+        to="/docs/features/breadcrumbs"
+    />
 </div>
 
 <br/>
