--- a/docs-site/docs/features/overview.mdx
+++ b/docs-site/docs/features/overview.mdx
@@ -20,6 +20,7 @@ import QuickFixesIcon from '@site/src/icons/quick-fixes.svg';
 import FlowDocsIcon from '@site/src/icons/flow-docs.svg';
 import ScopesIcon from '@site/src/icons/scopes.svg';
 import InjectIcon from '@site/src/icons/code-file.svg';
+import BreadcrumbsIcon from '@site/src/icons/breadcrumbs.svg';
 
 export const FeatureCard = ({icon: Icon, title, description, to}) => (
   <Link className="landingCard" to={to}>
@@ -65,6 +66,12 @@ Understand complex projects by visualizing relationships between flows.
         title="Structure View"
         description="Navigate the structure of large Concord files at a glance."
         to="/docs/features/structure-view"
+    />
+    <FeatureCard
+        icon={BreadcrumbsIcon}
+        title="Breadcrumbs"
+        description="Track your location in deep YAML structures."
+        to="/docs/features/breadcrumbs"
     />
 </div>
 
