--- a/docs-site/blog/xxxx-xx-xx-release-0.17.0.mdx
+++ b/docs-site/blog/xxxx-xx-xx-release-0.17.0.mdx
@@ -9,9 +9,10 @@ import Keystroke from '@site/src/components/Keystroke';
 import FlowIcon from '@site/src/icons/flow.svg';
 import TriggerIcon from '@site/src/icons/trigger.svg';
 import FormIcon from '@site/src/icons/form.svg';
+import BreadcrumbsIcon from '@site/src/icons/breadcrumbs.svg';
 
 The `0.17.0` release brings a significant boost to developer productivity with **Automatic Language Injection** for script steps.
-This update also enhances project navigation with new icons and improves scope safety with smarter inspections.
+This update also enhances project navigation with new icons, **editor breadcrumbs**, and improves scope safety with smarter inspections.
 
 <!--truncate-->
 
@@ -47,6 +48,20 @@ Your Concord elements now have distinct icons in the Project View, Structure Vie
 Working in a monorepo can get messy. The plugin now includes an inspection to warn you if a file is **Outside of Scope**.
 
 If you open a `.concord.yaml` file that isn't part of a defined Concord project (root or resource), the IDE will notify you. This prevents confusion when features like navigation or completion seem "broken" simply because the file isn't being indexed as part of the project context.
+
+## Breadcrumbs <BreadcrumbsIcon width="24" height="24" style={{verticalAlign: "text-bottom"}} />
+
+Navigating through deeply nested YAML structures is now much easier.
+The plugin now integrates with the IDE's **Breadcrumbs** component to show your current location within a `.concord.yaml` file.
+
+The breadcrumbs bar at the bottom of the editor provides a clear path from the file root to your current element, such as the active flow and the specific step you are editing. This is especially helpful when dealing with complex, multi-step flows.
+
+<figure className="docFigure docFigure--sm5">
+    <img src={require('@site/static/img/breadcrumbs.png').default} alt="Editor Breadcrumbs" />
+    <figcaption>
+        Stay oriented with breadcrumbs showing your location in the flow hierarchy.
+    </figcaption>
+</figure>
 
 ## Other Improvements
 
