--- a/docs-site/blog/xxxx-xx-xx-release-0.17.0.mdx
+++ b/docs-site/blog/xxxx-xx-xx-release-0.17.0.mdx
@@ -63,6 +63,10 @@ The breadcrumbs bar at the bottom of the editor provides a clear path from the f
     </figcaption>
 </figure>
 
+## Gitignore Support
+
+The plugin now respects `.gitignore` rules during Concord file discovery and scope resolution. This ensures that ignored files and directories (like build artifacts or temporary files) are excluded from the project's scope, making completion, navigation, and search results more accurate and relevant to your source code.
+
 ## Other Improvements
 
 *   **Completion Fixes:** Improved reliability of completion functionality in multi-scope projects.
