navigation from any Concord file to its root

--- a/docs-site/docs/features/navigation.mdx
+++ b/docs-site/docs/features/navigation.mdx
@@ -25,6 +25,15 @@ Quickly find and jump to any flow, form, or trigger by name across your entire p
 *   **Shortcut:** <Keystroke mac={[{icon: "⌘", label: "Cmd"}, {icon: "⌥", label: "Opt"}, {label: "O"}]} win={[{label: "Ctrl"}, {label: "Alt"}, {label: "Shift"}, {label: "N"}]} />
 *   **Search Everywhere:** Press `Double Shift` and start typing the name of a flow.
 
+## Related Symbol
+
+Quickly navigate from any Concord file to its associated root `concord.yaml` file. This is especially useful in large projects where files are deeply nested.
+
+*   **Shortcut:** <Keystroke mac={[{icon: "⌃", label: "Ctrl"}, {icon: "⌘", label: "Cmd"}, {icon: "↑", label: "Up"}]} win={[{label: "Ctrl"}, {label: "Alt"}, {label: "Home"}]} />
+*   **Menu:** Go to **Navigate** > **Related Symbol**
+
+If a file belongs to multiple [Scopes](./scopes.md), a popup will allow you to choose which root to navigate to.
+
 ## Breadcrumbs
 
 As you navigate through deep YAML structures, [breadcrumbs](./breadcrumbs.mdx) at the bottom of the editor help you stay oriented, showing you exactly which flow and step you are currently editing.
