--- a/docs-site/docs/features/completion.mdx
+++ b/docs-site/docs/features/completion.mdx
@@ -17,6 +17,32 @@ As you type in a `.concord.yaml` file, the plugin suggests valid keys based on y
 *   **Step types:** Inside a flow, it suggests <span className="tokenBadge" data-kind="step">call</span>, <span className="tokenBadge" data-kind="step">log</span>, <span className="tokenBadge" data-kind="step">task</span>, <span className="tokenBadge" data-kind="step">checkpoint</span>, <span className="tokenBadge" data-kind="step">if</span>, and others.
 *   **Call parameters:** When using a <span className="tokenBadge" data-kind="step">call</span> step, the plugin suggests input parameters defined in the target flow's [Documentation Block](./flow-docs).
 
+## Task Name Completion
+
+When writing a <span className="tokenBadge" data-kind="step">task</span> step, the plugin suggests available task names extracted from your project's [Maven dependencies](./dependencies):
+
+*   The plugin resolves JARs declared in `configuration.dependencies` and `configuration.extraDependencies`.
+*   Task names are extracted from `@Named` annotations inside the dependency JARs.
+*   Suggestions are **scope-aware** — each [scope](./scopes) only shows tasks from its own dependencies.
+
+```concord
+configuration:
+  dependencies:
+  - "mvn://com.walmartlabs.concord.plugins.basic:smtp-tasks:2.35.0"
+
+flows:
+  main:
+    - task: sm  # Ctrl+Space suggests: smtp
+      in:
+        to: "user@example.com"
+```
+
+:::tip
+If you add a new dependency and don't see its tasks in completion, use the floating **Refresh** toolbar
+that appears in the editor, or click **Refresh** in the [Concord tool window](./tool-window).
+See [Dependency Change Tracking](./dependencies#dependency-change-tracking) for details.
+:::
+
 ## Flow Documentation Completion
 
 When writing structured flow documentation (`/** ... */`), the plugin helps you define your parameters correctly:
