--- a/docs-site/docs/features/overview.mdx
+++ b/docs-site/docs/features/overview.mdx
@@ -152,7 +152,7 @@ Keep your codebase healthy as it grows.
         icon={DependenciesIcon}
         title="Dependencies"
         description="Automatic resolution of Maven dependencies with task name extraction."
-        to="/docs/features/dependencies"
+        to="./dependencies"
     />
 </div>
 
