--- a/docs-site/docs/features/overview.mdx
+++ b/docs-site/docs/features/overview.mdx
@@ -22,6 +22,7 @@ import ScopesIcon from '@site/src/icons/scopes.svg';
 import InjectIcon from '@site/src/icons/code-file.svg';
 import BreadcrumbsIcon from '@site/src/icons/breadcrumbs.svg';
 import RunIcon from '@site/src/icons/run.svg';
+import DependenciesIcon from '@site/src/icons/dependencies.svg';
 
 export const FeatureCard = ({icon: Icon, title, description, to}) => (
   <Link className="landingCard" to={to}>
@@ -145,6 +146,13 @@ Keep your codebase healthy as it grows.
         title="Scopes"
         description="Multiple isolated Concord project scopes within a single IntelliJ project."
         to="/docs/features/scopes"
+    />
+
+    <FeatureCard
+        icon={DependenciesIcon}
+        title="Dependencies"
+        description="Automatic resolution of Maven dependencies with task name extraction."
+        to="./dependencies"
     />
 </div>
 
