docs: fix screenshot size

--- a/docs-site/blog/2026-02-07-release-0.18.0.mdx
+++ b/docs-site/blog/2026-02-07-release-0.18.0.mdx
@@ -36,7 +36,7 @@ The tree displays your scopes, root files, dependencies, and resources in a sing
 The plugin now scans Maven dependencies declared in your `concord.yaml` and extracts `@Named` task names from JARs.
 This means you get scope-aware autocompletion for <span className="tokenBadge" data-kind="step">task</span> step values—no more guessing task names or hunting through documentation.
 
-<figure className="docFigure docFigure--lg">
+<figure className="docFigure docFigure--sm5">
     <img src={require('@site/static/img/task-name-autocompletion.png').default} alt="Task Name Autocompletion" />
     <figcaption>
         Task names are extracted from Maven dependencies and suggested as you type.
